Address linter warnings

--- a/tasks/account.yml
+++ b/tasks/account.yml
@@ -1,13 +1,13 @@
 ---
   - name: "[Service: {{ item.service }}] Create tempdir"
-    delegate_to: localhost
+    connection: local
     when: item.keytab is defined
     file:
       path: "fetch/krb/{{ ansible_fqdn }}"
       state: directory
 
   - name: "[Service: {{ item.service }}] Create LDAP service user"
-    delegate_to: localhost
+    connection: local
     ldap_entry:
       dn: "uid={{ ansible_fqdn }},ou={{ item.service }},ou=TechnicalUsers,{{ auth_client_ldap_basedn }}"
       server_uri: "ldaps://{{ auth_client_ldap_servers|random }}"
@@ -25,7 +25,7 @@
 
   - name: "[Service: {{ item.service }}] Kerberize LDAP user"
     when: userchanged.changed
-    delegate_to: localhost
+    connection: local
     expect:
       command: kadmin -r {{ auth_client_kerberos_realm }} -p {{ auth_client_kerberos_admin_user }} addprinc -randkey -x dn="uid={{ ansible_fqdn }},ou={{ item.service }},ou=TechnicalUsers,{{ auth_ldap_domain_ldap }}" +requires_preauth "{{ item.service }}/{{ ansible_fqdn }}@{{ auth_client_kerberos_realm }}"
       responses:
@@ -44,7 +44,7 @@
 
   - name: "[Service: {{ item.service }}] Export LDAP service user keytab"
     when: (item.keytab is defined) and (not keytab.stat.exists)
-    delegate_to: localhost
+    connection: local
     expect:
       command: "kadmin -r {{ auth_client_kerberos_realm }} -p {{ auth_client_kerberos_admin_user }} ktadd -k fetch/krb/{{ ansible_fqdn }}/{{ item.service }}.keytab {{ item.service }}/{{ ansible_fqdn }}@{{ auth_client_kerberos_realm }}"
       responses:
