--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,9 @@ auth_client_kerberos_realm: None
 
 auth_client_ca: /etc/ldap/ca.pem
 
+# Enctypes for recent kerberos
+auth_kerberos_enctypes: "aes256-cts-hmac-sha384-192 aes128-cts-hmac-sha256-128"
+
 # Similar syntax as the same variable in `auth-server`. This provides the same
 # features for hosts that can't use kadmin.local.
 auth_client_service_accounts: []
