Relax kerbeos enctypes and add glob option
Relax kerberos enctyptes because they were too tight for NFSv4. Also add
a 'glob' options that will export every principal for the host to the
respective keytab.

--- a/tasks/account.yml
+++ b/tasks/account.yml
@@ -43,10 +43,20 @@
     register: keytab
 
   - name: "[Service: {{ item.service }}] Export LDAP service user keytab"
-    when: (item.keytab is defined) and (not keytab.stat.exists)
+    when: (item.keytab is defined) and (not keytab.stat.exists) and not (item.glob is defined)
     connection: local
     expect:
       command: "kadmin -r {{ auth_client_kerberos_realm }} -p {{ auth_client_kerberos_admin_user }} ktadd -k fetch/krb/{{ ansible_fqdn }}/{{ item.service }}.keytab {{ item.service }}/{{ ansible_fqdn }}@{{ auth_client_kerberos_realm }}"
+      responses:
+        (for): "{{ auth_client_kerberos_admin_password }}"
+    args:
+      creates: "fetch/krb/{{ ansible_fqdn }}/{{ item.service }}.keytab"
+
+  - name: "[Service: {{ item.service }}] Export LDAP service user keytab"
+    when: (item.keytab is defined) and (not keytab.stat.exists) and (item.glob is defined) and (item.glob)
+    connection: local
+    expect:
+      command: "kadmin -r {{ auth_client_kerberos_realm }} -p {{ auth_client_kerberos_admin_user }} ktadd -k fetch/krb/{{ ansible_fqdn }}/{{ item.service }}.keytab -glob */{{ ansible_fqdn }}@{{ auth_client_kerberos_realm }}"
       responses:
         (for): "{{ auth_client_kerberos_admin_password }}"
     args:
