Fixup smartcard login
On most systems these packages are already installed, making it
especially hard to troubleshoot why stuff doesn't work. Anyways, this
fixes PKINIT with PKCS#11 tokens.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,8 @@
       name:
         - krb5-user
         - krb5-pkinit
+        - pcscd
+        - libccid
         - libldap-common
     when: ansible_distribution == "Debian"
 
